--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build
+        pip install setuptools wheel twine
     - name: Autobump version
       if: startsWith(github.ref, 'refs/tags')
       run: |
@@ -39,10 +39,10 @@ jobs:
         grep "$PLACEHOLDER" "$VERSION_FILE"
         sed -i "s/$PLACEHOLDER/__version__ = \"${VERSION}\"/g" "$VERSION_FILE"
     - name: Build package
-      run: python -m build
+      run: python setup.py sdist bdist_wheel
     - name: Publish package
       if: github.repository == 'uprichard/lambdatest-tunnel-manager' && startsWith(github.ref, 'refs/tags')
-      uses: pypa/gh-action-pypi-publish@main
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
+      env:
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+      run: twine upload dist/*
